// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publications getAllAreasOfInterest should load raw feed data with empty cache 1`] = `
Object {
  "eTag": null,
  "enabled": true,
  "identifierPrefix": "AMP",
  "lastModified": "2021-02-23T00:00:00",
  "links": Object {
    "self": Array [
      Object {},
    ],
  },
  "name": "Antimicrobial prescribing",
  "pluralName": "Antimicrobial prescribing",
}
`;

exports[`publications getAllProductTypes should load raw feed data with empty cache 1`] = `
Object {
  "eTag": null,
  "enabled": true,
  "group": "Advice",
  "identifierPrefix": "APA",
  "lastModified": "2016-09-06T00:00:00",
  "links": Object {
    "self": Array [
      Object {},
    ],
  },
  "name": "Antimicrobial prescribing evidence summary",
  "parent": "ES",
  "pluralName": "Antimicrobial prescribing evidence summaries",
}
`;

exports[`publications getAllProducts should load raw feed data with empty cache 1`] = `
Object {
  "areasOfInterestList": Array [],
  "developedAs": null,
  "eTag": null,
  "id": "CG1",
  "lastMajorModificationDate": "2002-12-01T00:00:00",
  "lastModified": "2020-09-02T08:58:37.35792Z",
  "productGroup": "Guideline",
  "productStatus": "Withdrawn",
  "productType": "CG",
  "publishedDate": "2002-12-01T00:00:00",
  "relevantTo": Array [],
  "title": "Schizophrenia",
}
`;
